2009-10-07  Adam Barth  <abarth@webkit.org>

        Unreviewed.  Added Aaron Boodman to committers.py.

        * Scripts/modules/committers.py:

2009-10-07  Evan Martin  <evan@chromium.org>

        Reviewed by Darin Adler.

        Add API to LayoutTestController for re/setting the system locale.
        https://bugs.webkit.org/show_bug.cgi?id=18994

        * DumpRenderTree/LayoutTestController.cpp:
        (setLocaleCallback):
        (LayoutTestController::staticFunctions):
        (LayoutTestController::setLocale):
        * DumpRenderTree/LayoutTestController.h:

2009-10-06  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Jan Alonzo.

        [Layout tests] [Gtk] Gtk DumpRenderTree should use WebKit test fonts
        https://bugs.webkit.org/show_bug.cgi?id=29689

        Build fix by adding -lfontconfig for DumpRenderTree.

        * GNUmakefile.am:

2009-10-07  Csaba Osztrogonac  <oszi@inf.u-szeged.hu>

        Reviewed by Simon Hausmann.

        Re-enable use-remote-links-to-tests for Qt. Disabled in r46416.

        * Scripts/run-webkit-tests:

2009-10-07  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        "delete" in EventSender is the backspace key, not the delete one.

        * DumpRenderTree/gtk/EventSender.cpp:
        (keyDownCallback):

2009-10-07  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        getChildrenWithRange expects as last parameter the end index, not
        the length of the range. Correct this and clarify the variable
        names to reflect how the code works.

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::getChildrenWithRange):
        (AccessibilityUIElement::getChildAtIndex):

2009-10-06  Mark Rowe  <mrowe@apple.com>

        Reviewed by Simon Fraser.

        <http://webkit.org/b/30138> update-webkit-localizable-strings assumes that WebKitTools/Scripts is in the PATH
