@@ -48,6 +48,9 @@ committers_unable_to_review = [
     Committer("Aaron Boodman", "aa@chromium.org"),
     Committer("Adam Langley", "agl@chromium.org"),
     Committer("Albert J. Wong", "ajwong@chromium.org"),
+    Committer("Andras Becsi", "becsi.andras@stud.u-szeged.hu"),
+    Committer("Antonio Gomes", "tonikitoo@webkit.org"),
+    Committer("Anthony Ricaud", "rik@webkit.org"),
     Committer("Ben Murdoch", "benm@google.com"),
     Committer("Brent Fulgham", "bfulgham@webkit.org"),
     Committer("Brian Weinstein", "bweinstein@apple.com"),
@@ -55,22 +58,33 @@ committers_unable_to_review = [
     Committer("Daniel Bates", "dbates@webkit.org"),
     Committer("Drew Wilson", "atwilson@chromium.org"),
     Committer("Dirk Schulze", "krit@webkit.org"),
+    Committer("Dmitry Titov", "dimich@chromium.org"),
+    Committer("Eli Fidler", "eli@staikos.net"),
+    Committer("Eric Roman", "eroman@chromium.org"),
     Committer("Fumitoshi Ukai", "ukai@chromium.org"),
+    Committer("Gabor Loki", "loki@inf.u-szeged.hu"),
     Committer("Greg Bolsinga", "bolsinga@apple.com"),
+    Committer("Jeremy Moskovich", "playmobil@google.com"),
     Committer("Jeremy Orlow", "jorlow@chromium.org"),
+    Committer("Jian Li", "jianli@chromium.org"),
+    Committer("Joe Mason", "joe.mason@torchmobile.com"),
+    Committer("John Abd-El-Malek", "jam@chromium.org"),
     Committer("Joseph Pecoraro", "joepeck@webkit.org"),
     Committer("Julie Parent", "jparent@google.com"),
     Committer("Kenneth Rohde Christiansen", "kenneth@webkit.org"),
     Committer("Laszlo Gombos", "laszlo.1.gombos@nokia.com"),
     Committer("Nate Chapin", "japhet@chromium.org"),
     Committer("Ojan Vafai", "ojan@chromium.org"),
+    Committer("Pam Greene", "pam@chromium.org"),
     Committer("Peter Kasting", "pkasting@google.com"),
     Committer("Pierre d'Herbemont", "pdherbemont@free.fr"),
     Committer("Ryosuke Niwa", "rniwa@webkit.org"),
+    Committer("Scott Violet", "sky@chromium.org"),
     Committer("Shinichiro Hamaji", "hamaji@chromium.org"),
     Committer("Tony Chang", "tony@chromium.org"),
     Committer("Yael Aharon", "yael.aharon@nokia.com"),
     Committer("Yong Li", "yong.li@torchmobile.com"),
+    Committer("Zoltan Herczeg", "zherczeg@inf.u-szeged.hu"),
     Committer("Zoltan Horvath", "zoltan@webkit.org"),
 ]
 
